# dbt-core

./: .bumpversion.cfg  .changie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  editable-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.changes/: 1.1.3.md  1.1.4.md  1.1.5.md  1.2.2.md  1.2.3.md  1.2.4.md  1.2.5.md  1.2.6.md  1.3.0-rc1.md  1.3.0-rc2.md  1.3.0.md  1.3.1.md  1.3.2-rc1.md  1.3.2.md  1.3.3.md  1.3.4.md  1.3.5.md  1.3.6.md  1.4.0-rc1.md  1.4.0-rc2.md  1.4.0.md  1.4.1.md  1.4.2-rc1.md  1.4.2-rc2.md  1.4.2.md  1.4.3.md  1.4.4.md  1.4.5.md  1.4.6.md  1.4.7.md  1.4.8.md  1.5.0-rc1.md  1.5.0-rc2.md  1.5.0.md  1.5.1-rc1.md  1.5.1-rc2.md  1.5.1.md  1.5.2-rc1.md  1.5.2-rc2.md  1.5.2.md  (+15 more)
.changes/1.4.0/: Fixes-20230119-111101.yaml
.changes/1.4.2/: Fixes-20230213-211257.yaml
.changes/1.6.1/: Under the Hood-20230807-164509.yaml
.changes/unreleased/: Dependencies-20230707-104052.yaml  Dependencies-20230712-004015.yaml  Dependencies-20230719-123743.yaml  Dependencies-20230720-002134.yaml  Dependencies-20230725-001042.yaml  Dependencies-20230731-003348.yaml  Dependencies-20230811-001929.yaml  Dependencies-20230918-000435.yaml  Dependencies-20231005-151737.yaml  Dependencies-20231005-151744.yaml  Dependencies-20231005-151758.yaml  Dependencies-20231011-004640.yaml  Features-20220909-154722.yaml  Features-20220914-140511.yaml  Features-20220915-183051.yaml  Features-20220920-122529.yaml  Features-20221118-141120.yaml  Features-20230118-134804.yaml  Features-20230131-212702.yaml  Features-20230208-090751.yaml  Features-20230302-095613.yaml  Features-20230516-101235.yaml  Features-20230607-113514.yaml  Features-20230616-163045.yaml  Features-20230629-033005.yaml  Features-20230915-174428.yaml  Features-20230925-182237.yaml  Fixes-20230203-162813.yaml  Fixes-20230222-133304.yaml  Fixes-20230224-162828.yaml  Fixes-20230319-151533.yaml  Fixes-20230515-142851.yaml  Fixes-20230524-215414.yaml  Fixes-20230621-185452.yaml  Fixes-20230627-224355.yaml  Fixes-20230712-164916.yaml  Fixes-20230803-093502.yaml  Fixes-20230810-183216.yaml  Fixes-20230815-103207.yaml  Fixes-20230817-164722.yaml  (+8 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/scripts/: integration-test-matrix.js
.github/workflows/: changelog-check.yml  cut-release-branch.yml  generate-cli-api-docs.yml  integration.yml  jira-security.yml  main.yml  model_performance.yml  performance.yml  release-branch-tests.yml  release-docker.yml  release.yml  schema-check.yml  structured-logging-protobuf-check.yml  structured-logging-schema-check.yml  version-bump.yml
None/: graph.gpickle  manifest.json
core/: README.md  setup.py
core/dbt/: compilation.py  constants.py  dataclass_schema.py  deprecations.py  exception_messages.py  exceptions.py  execute.py  flags.py  helper_types.py  internal_deprecations.py  jinja_exceptions.py  language_provider.py  lib.py  links.py  logger.py  main.py  node_types.py  semver.py  tracing.py  tracking.py  utils.py  version.py
core/scripts/: create_adapter_plugins.py
docker/: Dockerfile
docs/arch/: adr-006-click-for-cli.md
docs/roadmap/: 2022-05-dbt-a-core-story.md  2022-08-back-for-more.md
plugins/postgres/: README.md  setup.py
test/unit/: test_base_context.py  test_cache.py  test_compiler.py  test_config.py  test_context.py  test_contracts_graph_compiled.py  test_contracts_graph_parsed.py  test_contracts_graph_unparsed.py  test_deps.py  test_docs_blocks.py  test_exceptions.py  test_graph.py  test_graph_selector_methods.py  test_jinja.py  test_linker.py  test_macro_calls.py  test_manifest.py  test_node_types.py  test_parser.py  test_postgres_adapter.py  test_query_headers.py  test_unit_tests.py  test_yaml_renderer.py  utils.py
testing-project/postgres/: dbt_project.yml
tests/adapter/: README.md  setup.py
tests/unit/: test_adapter_connection_manager.py  test_agate_helper.py  test_cli.py  test_cli_flags.py  (+28 more)
(+619 files in other folders)
